Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 19.09.2022 08:08:11</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 19.09.2022 09:20:39</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,35 +7,42 @@
 <h5>Pondělí, 19. 09. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Zeleninová s kari</strong>
+<strong>V ÚTERÝ 20.9. BUDE Z OSOBNÍCH DŮVODU ZAVŘENO :(</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							0,-
+						</span>
+</p>
+<p>
+<strong>Čočková s párkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Maďarská Vepřová plec s rýží</strong>
+<strong>Znojemská hovězí pečeně s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							147,-
 						</span>
 </p>
 <p>
-<strong>Palačinky s lesním ovocem a tvarohem</strong>
+<strong>Špagety se smetanovou omáčkou se sušenými rajčaty, parmazánem a rukolou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							119,-
+							139,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: Tilapie se slaninou, kuřecí prsa s liškovou omáčkou, pečený brambor, zelenina, rýže</strong>
+<strong>TEPLÝ BUFET: kuře s liškovou omáčkou a slaninou, pečený brambor, zelenina, rýže, Tilapie s paprikami a rajcaty</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: kuskus se zeleninou a vepřovým masem s bylinkovym olejem, rajčatový s vejcem</strong>
+<strong>SALÁTY: rajčatový s cibulkou, kuskus s paprikovym dresinkem a paprikami</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -52,7 +59,57 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pondělí 19.9.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Jáhlový puding s malinami  (bez lepku a laktózy) </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Čokoládový dort</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Brownie </div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Houbový krém v menu  <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Houbový krém samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Krůtí tandori, květák, karotka, jasmínová rýže, koriandr, černý sezam <em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">169 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>350g Zapečené těstoviny quattro formaggi s kuřecím masem, jarní cibulka, výhonky <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>350g Noky v dýňové omáčce, baby špenát, parmazán, restovaná semínka <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -88,7 +145,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy siven s omackou puttanesca {rajcata, olivy, kapary, ancovicky}, zeleninovy bulgur, salatek {L} 155</li><li>Pecena cerstva kambala a filet z lososa s omackou puttanesca, zeleninovy bulgur, salatek {L} 179</li><li>Grilovany veprovy kebab v tanduri marinade {jogurt, citrony, zazvor, garam masala} korenena ryze s beluga cockou, jogurtovy dip, salatek 155</li><li>Smazene rizecky z koroptvich prsicek, lehky bramborovy salat s cerstvymi okurkami, cervenou cibuli a zelenymi bylinkami, citron {L} 179</li><li>Indicka pakora {cizrnove smazenky} s dyni, cuketou, cibulkou a panc phoron, jogurtovy dip, korenena ryze s beluga cockou, salatek 155 </li></ol>
+<ol><li>Smazene stripsy z jihoceskeho kapra {filet}, bramborovy salat s cerstvymi okurkami, zelenou cibulkou a majonezou, citron {L} 155</li><li>Peceny filet z cerstveho africkeho sumecka s citronem a omackou salsa verde, dal z cervene cocky a zluteho hrachu se zelenymi bylinkami a zeleninou, salatek 155</li><li>Palive a vonave goanske vindalu s veprovym masem, bramborami, garam masala a cerstvym chilli, jasminova ryze, salatek 155</li><li>Doruzova pecena prsicka z divoke kachny s merunkovou omackou, gratinovane brambory, salatek 185</li><li>Pecena dyne plnena dalem z cervene cocky a zluteho hrachu se zelenymi bylinkami a zeleninou, salatek 155</li></ol>
 </td>
 </tr>
 </table>
