--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,51 +1,16 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 19.09.2022 15:28:12</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 20.09.2022 08:01:17</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Pondělí, 19. 09. 2022</h5>
+<h5>Úterý, 20. 09. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>V ÚTERÝ 20.9. BUDE Z OSOBNÍCH DŮVODU ZAVŘENO :(</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							0,-
-						</span>
-</p>
-<p>
-<strong>Čočková s párkem</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							35,-
-						</span>
-</p>
-<p>
-<strong>Znojemská hovězí pečeně s rýží</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							147,-
-						</span>
-</p>
-<p>
-<strong>Špagety se smetanovou omáčkou se sušenými rajčaty, parmazánem a rukolou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							139,-
-						</span>
-</p>
-<p>
-<strong>TEPLÝ BUFET: kuře s liškovou omáčkou a slaninou, pečený brambor, zelenina, rýže, Tilapie s paprikami a rajcaty</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							44,-
-						</span>
-</p>
-<p>
-<strong>SALÁTY: rajčatový s cibulkou, kuskus s paprikovym dresinkem a paprikami</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							40,-
 						</span>
 </p>
 </div>
@@ -57,59 +22,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pondělí 19.9.2022</div>
+<div class="nadpis">Úterý 20.9.2022</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Jáhlový puding s malinami  (bez lepku a laktózy) </div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Čokoládový dort</div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Brownie </div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Ovocný salát</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Variace bavorských baget </div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Houbový krém v menu  <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Houbový krém samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Krůtí tandori, květák, karotka, jasmínová rýže, koriandr, černý sezam <em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">169 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>350g Zapečené těstoviny quattro formaggi s kuřecím masem, jarní cibulka, výhonky <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">159 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>350g Noky v dýňové omáčce, baby špenát, parmazán, restovaná semínka <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">159 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -120,10 +35,10 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zelná se smetanou a klobásou</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Frankfurtská s klobásou</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">150g Smažené holanské řízky, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Svíčková na smetaně s hovězím masem, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Španělský vepřový ptáček, dušená jasmínová rýže</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové rolované knedlíky s anglickou slaninou, dušené bílé zelí</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka podávaná na smetanové omáčce s barevným pepřem, grusetky promíchané šunkou, rukolou a parmazánem</td><td class="menuPrice">163,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený květák, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Pečená kuřecí prsa na tymiánu s houbovým ragú, bramborové noky</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné sýrové omáčce, špecle</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight">600g</td><td class="menuName">Pečené vepřové koleno ve vlastní šťávě, beraní roh, cibule, hořčice, křen, grilované brambory</td><td class="menuPrice">179,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený řízek a 150g Steak z kuřecích prsou za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">bezlep kový</td><td class="menuName">Pečený čokoládový dort s mákem (90% čokoláda), omáčka z lesního ovoce, šlehačka  (bezlepkový) </td><td class="menuPrice">69,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Šenkýrenská směs z vepřového masa s klobásou, houbami a zeleninou, naše bramboráčky</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a vařeným vejcem, kynuté houskové knedlíky</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Vepřové výpečky, bramborové knedlíky, špenát</td><td class="menuPrice">146,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Srbské rizoto s kuřecím masem a zeleninou, strouhaný sýr, kyselá okurka</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na roštu s anglickou slaninou, grilované brambory, volské oko</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 120g Restované krevety na másle s plátky česneku, brokolicové pyré, parmazán, rukola, grilovaní karotka (bezlepkové)</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight">170g</td><td class="menuName">Smažená vepřová kapsa plněná anglickou slaninou a nivou, mačkané brambory s cibulkou, citrón</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové kotlety bez kosti, jemná houbová omáčka, restované špecle</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny ochucený olivovým olejem, 150g smažené kuřecí stripsy v cornflakes, vařené vejce</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený řízek a 150g Steak z kuřecích prsou za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName"></td><td class="menuPrice"></td></tr><tr><td class="menuWeight">bezlep kový</td><td class="menuName">Pečený čokoládový dort (90% čokoláda), omáčka z lesního ovoce, šlehačka  (bezlepkový)</td><td class="menuPrice">69,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vanilkový pudink s lesním ovocem a šlehačkou</td><td class="menuPrice">45,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">0,5l</td><td class="menuName">Arnoštova hořká 10° alk. 4,3% - pivovar Pardubice</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° alk. 4,7% - pivovar Staropramen</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">BOHEMIAN LAGER 11° alk. 4,4% - Pivovar Libertas</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
@@ -134,9 +49,10 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<div class="row denni-menu" style="max-width:570px; margin:auto; margin-top:70px;"><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer0_a.js?v=" + Date.now() + "'><\/script>");</script>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div></div>
+<div class="row denni-menu" style="max-width:570px; margin:auto; margin-top:70px;"><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
+  position: relative;
+  top: -100px; 
+  visibility: hidden;"></a><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script></div></div>
 </td>
 </tr>
 </table>
