Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 20.09.2022 08:01:17</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 20.09.2022 09:03:32</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -24,7 +24,52 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Úterý 20.9.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s tvarohem, ostružinami a drobenkou</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Brownie </div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Frankfurtská polévka v menu  <em title="Obiloviny obsahující lepek">1</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Frankfurtská polévka samostatně <em title="Obiloviny obsahující lepek">1</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Kuřecí prso plněné špenátem a ricottou, batátové pyré, polníček, ředkvička <em title="Mléko">7</em></div>
+<div class="cena">169 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Vepřová plec na víně, kořenová zelenina, bramborová kaše <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>3 ks Kynuté knedlíky s meruňkami, perník, zakysaná smetana, máslo <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -60,7 +105,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Smazene stripsy z jihoceskeho kapra {filet}, bramborovy salat s cerstvymi okurkami, zelenou cibulkou a majonezou, citron {L} 155</li><li>Peceny filet z cerstveho africkeho sumecka s citronem a omackou salsa verde, dal z cervene cocky a zluteho hrachu se zelenymi bylinkami a zeleninou, salatek 179</li><li>Palive a vonave goanske vindalu s veprovym masem, bramborami, garam masala a cerstvym chilli, jasminova ryze, salatek 155</li><li>Doruzova pecena prsicka z divoke kachny s merunkovou omackou, gratinovane brambory, salatek 185</li><li>Pecena dyne plnena dalem z cervene cocky a zluteho hrachu se zelenymi bylinkami a zeleninou, salatek 155</li></ol>
+<ol><li>Peceny filet z norskeho slede se svedskou okurkovo-horcicnou omackou, stouchane brambory s porkem, salatek 155</li><li>Spagety s chobotnici a kalamary, fazolovymi lusky, omackou salsa verde a zelenymi bylinkami {L} 185</li><li>Thajske smazene kureci kousky se sladkokyselou chilli omackou, thajska lepkava ryze, salatek {L} 155</li><li>Hovezi licka na cervenem vine a korenove zelenine, stouchane brambory s porkem, salatek z cerveneho zeli 175</li><li>Maghrebska zapecena saksuka s rajcaty, sazenymi vejci a balkanskym syrem, bulgur, salatek {L} 155</li></ol>
 </td>
 </tr>
 </table>
