Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.09.2022 08:03:01</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.09.2022 09:21:40</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -24,7 +24,57 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Středa 21.9.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Mango cheesecake</div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Pavlova roláda  (bez lepku) </div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s tvarohem, ostružinami a drobenkou</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Krém z pečené mrkve v menu <em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Krém z pečené mrkve samostatně <em title="Celer">9</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>200g Holandský sekaný řízek, bramborová kaše, okurkový relish <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">169 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>350g Caesar salát s kuřecím masem, krutony a parmazánem <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Ryby">4</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Čočka beluga s kořenovou zeleninou, marinovanou cuketou, pečenými rajčaty a restovanými semínky <em title="Celer">9</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -60,7 +110,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z norskeho slede se svedskou okurkovo-horcicnou omackou, stouchane brambory s porkem, salatek 155</li><li>Spagety s chobotnici a kalamary, fazolovymi lusky, omackou salsa verde a zelenymi bylinkami {L} 185</li><li>Thajske smazene kureci kousky se sladkokyselou chilli omackou, thajska lepkava ryze, salatek {L} 155</li><li>Hovezi licka na cervenem vine a korenove zelenine, stouchane brambory s porkem, salatek z cerveneho zeli 175</li><li>Maghrebska zapecena saksuka s rajcaty, sazenymi vejci a balkanskym syrem, bulgur, salatek {L} 155</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s tapenadou z cernych oliv, stredomorsky fusilli salat s pecenou letni zeleninou, rajcaty a bylinkami {L} 35/45</li><li>Peceny filet z cerstveho morskeho vlka s tapenadou z cernych oliv, stredomorsky fusilli salat s pecenou letni zeleninou, rajcaty a bylinkami {L}{ 185</li><li>Teply salat s grilovanym veprovym, cerstvou zeleninou {salat, okurky, mrkev}, ryzovymi nudlemi, limetkovou zalivkou a asijskymi bylinkami 155</li><li>Wrap s uzenym hovezim pastrami, rimskym salatem, rajcaty a horcicnym dresinkem, pecene brambory, jogurtovy dip, salatek {L} 179</li><li>Indicke zampionove kari s pecenou dyni, cizrnou, rajcaty, jogurtem a platkem grilovaneho halloumi, jasminova ryze 155</li></ol>
 </td>
 </tr>
 </table>
