Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.09.2022 09:21:40</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.09.2022 09:56:19</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,10 +7,45 @@
 <h5>Středa, 21. 09. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>V ÚTERÝ 20.9. BUDE Z OSOBNÍCH DŮVODU ZAVŘENO :(</strong>
+<strong>Kmínová s vejcem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							0,-
+							35,-
+						</span>
+</p>
+<p>
+<strong>Smažené rybí file s vařeným bramborem a tatarkou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							147,-
+						</span>
+</p>
+<p>
+<strong>Penne s houbovou omáčkou, kuřecím masem a sýrem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							145,-
+						</span>
+</p>
+<p>
+<strong>Míchaný salát s grilovanými kuřecími paličkami</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							143,-
+						</span>
+</p>
+<p>
+<strong>TEPLÝ BUFET: pečený brambor, roláda se špenátem a cibulkou a slaninou, zelenina, ryze, tilapie s bylinkovým olejem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							44,-
+						</span>
+</p>
+<p>
+<strong>SALÁTY: rajčatový, okurkový s koprem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							40,-
 						</span>
 </p>
 </div>
@@ -110,7 +145,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s tapenadou z cernych oliv, stredomorsky fusilli salat s pecenou letni zeleninou, rajcaty a bylinkami {L} 35/45</li><li>Peceny filet z cerstveho morskeho vlka s tapenadou z cernych oliv, stredomorsky fusilli salat s pecenou letni zeleninou, rajcaty a bylinkami {L}{ 185</li><li>Teply salat s grilovanym veprovym, cerstvou zeleninou {salat, okurky, mrkev}, ryzovymi nudlemi, limetkovou zalivkou a asijskymi bylinkami 155</li><li>Wrap s uzenym hovezim pastrami, rimskym salatem, rajcaty a horcicnym dresinkem, pecene brambory, jogurtovy dip, salatek {L} 179</li><li>Indicke zampionove kari s pecenou dyni, cizrnou, rajcaty, jogurtem a platkem grilovaneho halloumi, jasminova ryze 155</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s tapenadou z cernych oliv, stredomorsky fusilli salat s pecenou letni zeleninou, rajcaty a bylinkami {L} 155</li><li>Peceny filet z cerstveho morskeho vlka s tapenadou z cernych oliv, stredomorsky fusilli salat s pecenou letni zeleninou, rajcaty a bylinkami {L}{ 185</li><li>Teply salat s grilovanym veprovym, cerstvou zeleninou {salat, okurky, mrkev}, ryzovymi nudlemi, limetkovou zalivkou a asijskymi bylinkami 155</li><li>Wrap s uzenym hovezim pastrami, rimskym salatem, rajcaty a horcicnym dresinkem, pecene brambory, jogurtovy dip, salatek {L} 179</li><li>Indicke zampionove kari s pecenou dyni, cizrnou, rajcaty, jogurtem a platkem grilovaneho halloumi, jasminova ryze 155</li></ol>
 </td>
 </tr>
 </table>
