--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.09.2022 07:59:04</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.09.2022 08:54:12</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,35 +7,28 @@
 <h5>Čtvrtek, 22. 09. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Kmínová s vejcem</strong>
+<strong>Houbová krémová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Smažené rybí file s vařeným bramborem a tatarkou</strong>
+<strong>Kuřecí stehno tandoori s kuskusem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							147,-
 						</span>
 </p>
 <p>
-<strong>Penne s houbovou omáčkou, kuřecím masem a sýrem</strong>
+<strong>Hermelín v pivním těstíčku s kroketami a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							145,-
+							149,-
 						</span>
 </p>
 <p>
-<strong>Míchaný salát s grilovanými kuřecími paličkami</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							143,-
-						</span>
-</p>
-<p>
-<strong>TEPLÝ BUFET: pečený brambor, roláda se špenátem a cibulkou a slaninou, zelenina, ryze, tilapie s bylinkovým olejem</strong>
+<strong>TEPLÝ BUFET: kuřecí špalky, Tilapie s hlívou, zelenina, rýže, pečený brambor</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
