Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.09.2022 08:54:12</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.09.2022 09:27:23</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -88,7 +88,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s tapenadou z cernych oliv, stredomorsky fusilli salat s pecenou letni zeleninou, rajcaty a bylinkami {L} 155</li><li>Peceny filet z cerstveho morskeho vlka s tapenadou z cernych oliv, stredomorsky fusilli salat s pecenou letni zeleninou, rajcaty a bylinkami {L}{ 185</li><li>Teply salat s grilovanym veprovym, cerstvou zeleninou {salat, okurky, mrkev}, ryzovymi nudlemi, limetkovou zalivkou a asijskymi bylinkami 155</li><li>Wrap s uzenym hovezim pastrami, rimskym salatem, rajcaty a horcicnym dresinkem, pecene brambory, jogurtovy dip, salatek {L} 179</li><li>Indicke zampionove kari s pecenou dyni, cizrnou, rajcaty, jogurtem a platkem grilovaneho halloumi, jasminova ryze 155</li></ol>
+<ol><li>Filet z atlantickeho hejka zapeceny na recky zpusob s rajcaty, maslovymi fazolemi a balkanskym syrem, jasminova ryze, salatek 155</li><li>Bramborove gnocchi s kousky uzeneho lososa, cerstvymi rajcaty, fazolovymi lusky a pesto rosso 179</li><li>Hovezi nudlicky Stroganoff se zampiony, znojemskymi okurkami, cibulkou a zakysanou smetanou, jasminova ryze, salatek 155</li><li>Smazene teleci rizecky, stouchane brambory s porkem, salatek z cervene repy, citron {L} 179</li><li>Placicky z cervene repy s balkanskym syrem, besanem a petrzelkou, jogurtovy dip s bazalkou, stouchane brambory s porkem 155</li></ol>
 </td>
 </tr>
 </table>
