Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.09.2022 07:57:23</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.09.2022 08:46:08</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -128,7 +128,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Filet z atlantickeho hejka zapeceny na recky zpusob s rajcaty, maslovymi fazolemi a balkanskym syrem, jasminova ryze, salatek 155</li><li>Bramborove gnocchi s kousky uzeneho lososa, cerstvymi rajcaty, fazolovymi lusky a pesto rosso 179</li><li>Hovezi nudlicky Stroganoff se zampiony, znojemskymi okurkami, cibulkou a zakysanou smetanou, jasminova ryze, salatek 155</li><li>Smazene teleci rizecky, stouchane brambory s porkem, salatek z cervene repy, citron {L} 179</li><li>Placicky z cervene repy s balkanskym syrem, besanem a petrzelkou, jogurtovy dip s bazalkou, stouchane brambory s porkem 155</li></ol>
+<ol><li>Thajske massaman kari s kousky rybich filetu {hejk, makrela}, kokosovym mlekem, arasidy a zeleninou, jasminova ryze 155</li><li>Smazena cerstva norska treska, tatarska omacka, pecene brambory, salatek, citron {L} 179</li><li>Korejske veprove ribsy v miso marinade se sezamem, medem, spetkou chilli a zelenou cibulkou, smazena zeleninova ryze, salatek 155</li><li>Grilovane medailonky z krutich prsou s filipinskym bananovym catny, smazena zeleninova ryze, salatek 179</li><li>Vegetarianska musaka s cuketami, rajcaty, bramborami a maslovymi fazolemi zapecena ve smetanove omacce, salatek {L} 155</li></ol>
 </td>
 </tr>
 </table>
