Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.09.2022 08:46:08</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.09.2022 09:30:03</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,35 +7,35 @@
 <h5>Pátek, 23. 09. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Houbová krémová</strong>
+<strong>Kari polévka s koriandrem a zázvorem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Kuřecí stehno tandoori s kuskusem</strong>
+<strong>Vepřová plec s hořčičnou omáčkou a pečeným bramborem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							147,-
 						</span>
 </p>
 <p>
-<strong>Hermelín v pivním těstíčku s kroketami a tatarkou</strong>
+<strong>Skořicové lívance s jahodami a jahodovým jogurtem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							149,-
+							125,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: kuřecí špalky, Tilapie s hlívou, zelenina, rýže, pečený brambor</strong>
+<strong>TEPLÝ BUFET: kuřecí špalky, kuřecí stripsy, Tilapie, brambor Smetanovy, ryze, zelenina</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: rajčatový, okurkový s koprem</strong>
+<strong>SALÁTY: okurkový s cesnekovym dresinkem, trhany s rukolou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
