Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 27.09.2022 08:48:47</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 27.09.2022 09:36:44</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -14,35 +14,35 @@
 						</span>
 </p>
 <p>
-<strong>Květáková</strong>
+<strong>Houbová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Hovězí stroganov s rýží</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							149,-
-						</span>
-</p>
-<p>
-<strong>Špagety s pestem, kuřecím masem a parmazánem</strong>
+<strong>Kuřecí na paprice s rýží NEBO těstovinou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							147,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: žebra, kukuřička, kuskus, rýže, pečený brambor, Tilapie na Smetanové cibulce</strong>
+<strong>Vepřové srbské rizoto se sýrem a okurkou NEBO řepou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							145,-
+						</span>
+</p>
+<p>
+<strong>TEPLÝ BUFET: Tilapie s bazalkovým pestem, Vepřový plátek s omáčkou ze sušených rajcat, baby mrkev, rýže, kuskus, pečený brambor</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: Míchaný s pazitkou, kuskus s rajčaty a limetkovým dipem</strong>
+<strong>SALÁTY: Míchaný, kuskus se zeleninou a limetkovým dipem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -140,7 +140,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy jihocesky pstruh s pestem s bylinkovym pestem se susenymi rajcaty, jahly s pecenou zeleninou, salatek 155</li><li>Pecena cerstva gronska kambala a filet z candata s bylinkovym pestem se susenymi rajcaty, jahly s pecenou zeleninou, salatek 185</li><li>Burrito s mexickym carnitas {trhane veprove s pecenymi palivymi paprikami} a goudou, bylinkovy jogurt, korenena ryze, salatek {L} 155</li><li>Grilovana kruti jatra s merunkovou omackou, gratinovane brambory se syrem, salatek 175</li><li>Smazene zampiony portobello, stouchane brambory s porkem, tatarska omacka {L} 155</li></ol>
+<ol><li>Grilovane biftecky z rybich filetu { hejk, makrela, uzeny losos} s petrzelkou a paprikou, salsa z cerstvych rajcat a cervene cibule, pecene brambory, salatek 155</li><li>Peceny filet z cerstveho morskeho vlka se salsou z cerstvych rajcat a cervene cibule, pecene brambory, salatek 185</li><li>Kruti medailonky v citronove omacce po jihoindicku s kokosovym mlekem a zazvorem, jasminova ryze, salatek 155</li><li>Grilovane jemne korenene jehneci kofta, zeleninove birjany z basmati ryze, jogurtovy bylinkovy dip, salatek 175</li><li>Italske dynove rizoto s cerstvou brokolici a zralou goudou, salatek 155</li></ol>
 </td>
 </tr>
 </table>
